WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280493
Web Inspector: InspectorFrontendHost should not call setPageAndTextZoomFactors on the LocalFrame
https://bugs.webkit.org/show_bug.cgi?id=280493
Summary
Web Inspector: InspectorFrontendHost should not call setPageAndTextZoomFactor...
Matt Woodrow
Reported
2024-09-26 20:00:02 PDT
This function recursively sets the zoom on itself and all descendant LocalFrames in the same process, but won't zoom RemoteFrames (site-isolated subframes). This should instead call the same function on the WebPageProxy in the UI-process, which can traverse the full frame subtree (asynchronously).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-26 20:00:13 PDT
<
rdar://problem/136798696
>
Nipun Shukla
Comment 2
2025-09-08 09:24:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50450
EWS
Comment 3
2025-10-09 12:19:53 PDT
Committed
301271@main
(795dbd901705): <
https://commits.webkit.org/301271@main
> Reviewed commits have been landed. Closing PR #50450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug