Web Inspector: InspectorFrontendHost should not call setPageAndTextZoomFactors on the LocalFrame https://bugs.webkit.org/show_bug.cgi?id=280493 rdar://136798696

Reviewed by BJ Burg.

Setting zoom for inspector previously used a function which recursively iterates through
the frame stack and sets state. However, we were using a variant which would not zoom
into RemoteFrames. This patch changes that to use the function from the UI Process,
which can traverse the full frame tree including local and remote frames.

* Source/WebCore/inspector/InspectorFrontendClient.h:
(WebCore::InspectorFrontendClient::setPageAndTextZoomFactors):
(WebCore::InspectorFrontendClient::pageZoomFactor const):
* Source/WebCore/inspector/InspectorFrontendHost.cpp:
(WebCore::InspectorFrontendHost::setZoomFactor):
(WebCore::InspectorFrontendHost::zoomFactor):
* Source/WebKit/UIProcess/Inspector/RemoteWebInspectorUIProxy.cpp:
(WebKit::RemoteWebInspectorUIProxy::setPageAndTextZoomFactors):
* Source/WebKit/UIProcess/Inspector/RemoteWebInspectorUIProxy.h:
* Source/WebKit/UIProcess/Inspector/RemoteWebInspectorUIProxy.messages.in:
* Source/WebKit/UIProcess/Inspector/WebInspectorUIProxy.cpp:
(WebKit::WebInspectorUIProxy::setPageAndTextZoomFactors):
* Source/WebKit/UIProcess/Inspector/WebInspectorUIProxy.h:
* Source/WebKit/UIProcess/Inspector/WebInspectorUIProxy.messages.in:
* Source/WebKit/WebProcess/Inspector/RemoteWebInspectorUI.cpp:
(WebKit::RemoteWebInspectorUI::setPageAndTextZoomFactors):
(WebKit::RemoteWebInspectorUI::pageZoomFactor const):
* Source/WebKit/WebProcess/Inspector/RemoteWebInspectorUI.h:
* Source/WebKit/WebProcess/Inspector/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::setPageAndTextZoomFactors):
(WebKit::WebInspectorUI::pageZoomFactor const):
* Source/WebKit/WebProcess/Inspector/WebInspectorUI.h:

Canonical link: https://commits.webkit.org/301271@main